# TabulaRasa

./: LICENSE
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/core/: __init__.py  audit.py  config.py  llm.py  review.py  review_ops.py  store.py
backend/sap_ingestion/: __init__.py  api.py  extraction.py  parser.py  pipeline.py  prompts.py  schemas.py
backend/tlf_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/toc_synthesis/: __init__.py  api.py  library.py  library_local.py  pipeline.py  prompts.py  schemas.py  synthesis.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js  mock-stage1.js  stage1.js  studies.js  user.js
frontend/src/components/: Citation.jsx  Confidence.jsx  DataTable.jsx  DetailSection.jsx  Header.jsx  Pill.jsx  ReviewActions.jsx  SapUpload.jsx  StageTabs.jsx  StatusIndicator.jsx  TentativeBanner.jsx
frontend/src/lib/: StageProgressContext.jsx  StudyContext.jsx  UserContext.jsx  format.js
frontend/src/pages/: LandingPage.jsx  StudyWorkspace.jsx
frontend/src/stages/stage1_ingestion/: AddRuleModal.jsx  AnalysesTab.jsx  AnalysisDetail.jsx  AuditTab.jsx  GapDetail.jsx  GapsTab.jsx  RuleDetail.jsx  RulesTab.jsx  SectionMapTab.jsx  Stage1.jsx  hooks.js
frontend/src/stages/stage2_toc/: Stage2.jsx
frontend/src/stages/stage3_shells/: Stage3.jsx
frontend/src/stages/stage4_adam/: Stage4.jsx
frontend/src/stages/stage5_codegen/: Stage5.jsx
frontend/src/styles/: index.css
