[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tlf-backend"
version = "0.1.0"
description = "TLF automation backend (Stage 1 ingestion, Stage 2 TOC synthesis, ...)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pymongo>=4.11",
    "boto3>=1.38",
    "llama-index-core>=0.12",
    "llama-index-llms-bedrock-converse>=0.5",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
]

[tool.setuptools]
packages = ["core", "sap_ingestion", "toc_synthesis", "app"]
